fix: section mobile margin

--- a/css/style.css
+++ b/css/style.css
@@ -1324,7 +1324,7 @@ body {
     padding-top: 1.875rem;
   }
   .section {
-    margin-top: 0.3125rem;
+    margin-top: 3.125rem;
     margin-bottom: 1.5625rem;
   }
   .section-title {
